# document-processor

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build-and-deploy.yaml
.run/: Docker.run.xml  FastAPI.run.xml  docker.run.xml
app/: __init__.py  api.py  config.py  dl_converter.py  document_processor.py  download_models.py  logging.py  models.py
app/services/: content_extractor.py  dl_converter.py  docling.py  model_adapters.py
app/services/content_extraction/: __init__.py  content_extractor.py  image_extractor.py  page_extractor.py  slice_extractor.py
app/services/content_extractor/: __init__.py  content_extractor.py  image_extractor.py  page_extractor.py  slice_extractor.py
app/utils/: __init__.py  base64.py  pdf_helpers.py
